[gd_scene load_steps=6 format=3 uid="uid://cxs8r8o88wcm8"]

[ext_resource type="Script" path="res://Scripts/fill_cup_game.gd" id="1_0reas"]
[ext_resource type="Shader" path="res://Scripts/fill_cup_game.gdshader" id="2_eyb2a"]
[ext_resource type="Texture2D" uid="uid://dwubfpda6vhfo" path="res://Assets/foods/utensil/measuring_cup_liquid.svg" id="2_um18p"]
[ext_resource type="Texture2D" uid="uid://jb2kxrmj1lcr" path="res://Assets/foods/utensil/measuring_cup.svg" id="3_q7322"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ls278"]
shader = ExtResource("2_eyb2a")
shader_parameter/color = Color(0.894118, 0.803922, 0.352941, 1)
shader_parameter/percent = 0.0

[node name="fillCupGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0reas")

[node name="cupMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="cupContainer" type="Control" parent="cupMargin"]
layout_mode = 2

[node name="measuringLiquid" type="TextureRect" parent="cupMargin/cupContainer"]
material = SubResource("ShaderMaterial_ls278")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_um18p")
expand_mode = 1
stretch_mode = 5

[node name="measuringCup" type="TextureRect" parent="cupMargin/cupContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_q7322")
expand_mode = 1
stretch_mode = 5

[connection signal="gui_input" from="cupMargin/cupContainer" to="." method="_on_cup_container_gui_input"]
[connection signal="mouse_entered" from="cupMargin/cupContainer" to="." method="_on_cup_container_mouse_entered"]
[connection signal="mouse_exited" from="cupMargin/cupContainer" to="." method="_on_cup_container_mouse_exited"]
